[Features] Fix cursor alignment for editable placeholder.

--- a/ode/public/css/features.css
+++ b/ode/public/css/features.css
@@ -40,8 +40,7 @@ input.fdescription {
     border: solid 3px #94D6EA;
     border-radius: 10px;
     padding-left: 3px;
-    display: table-cell;
-    vertical-align: middle;
+    padding-top: 2px;
     color: rgba(51, 51, 51, .45); /* #333333 */
     cursor: default;
 }
